Gallery x-scroll createb

--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -49,31 +49,25 @@
         display: flex;
         justify-content: space-between;
       }
-    }
 
-    &--facebook {
-      margin: 0 26px 0 65px;
+      &-facebook {
+        width: 11px;
+        height: 24px;
+        transition: transform 0.3s linear;
 
-      @include onTablet {
-        margin: 0 26px;
+        &:hover {
+          transform: scale(1.3);
+        }
       }
 
-      width: 11px;
-      height: 24px;
-      transition: transform 0.3s linear;
+      &-instagram {
+        width: 24px;
+        height: 24px;
+        transition: transform 0.3s linear;
 
-      &:hover {
-        transform: scale(1.3);
-      }
-    }
-
-    &--instagram {
-      width: 24px;
-      height: 24px;
-      transition: transform 0.3s linear;
-
-      &:hover {
-        transform: scale(1.3);
+        &:hover {
+          transform: scale(1.3);
+        }
       }
     }
   }
