Add some changes

--- a/src/styles/blocks/art-museum.scss
+++ b/src/styles/blocks/art-museum.scss
@@ -117,6 +117,8 @@
 
     margin-right: var(--button-height);
     border: 1px solid $c-button;
+
+    transition: all 0.3s;
   
     @include onDesktop {
       align-self: flex-end;
@@ -145,8 +147,10 @@
       background-color: $c-red;
     }
 
-    @include hover (border-color, $c-red);
-    @include hover (transform, scale(101%));
+    &:hover {
+      border-color: $c-red;
+      transform: scale(101%);
+    }
 
   }
 
