--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -4,9 +4,9 @@
   top: 0;
   left: 0;
   z-index: 4;
-  width: 100%;
+  width: 300px;
 
-  background-color: $c-button;
+  background-color: #f5f5f5;
   border-radius: 0 0 15px;
 
   transform: translateY(-100%);
@@ -14,16 +14,8 @@
 
   &:target {
     transform: translateY(0);
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.6);
+    box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.6);
 
-  }
-
-  @include onTablet {
-    width: 50%;
-  }
-
-  @include onDesktop {
-    width: 30%;
   }
 
   &__menu-closer {
@@ -46,24 +38,16 @@
 
   &__list {
 
-    margin: 0;
     padding: 0 0 0 30px;
     list-style: none;
     display: flex;
-    justify-content: space-between;
-    flex-direction: row;
-    flex-wrap: wrap;
-    max-width: 300px;
+    flex-direction: column;
 
-    @include onMobile {
-      padding-left: 10px;
-    }
-
+    margin: 0 0 20px;
   }
 
   &__item {
-    padding: 0 5px;
-    margin-bottom: 10px;
+    padding: 8px 0;
   }
 
   &__link {
@@ -76,9 +60,8 @@
     font-weight: normal;
     font-size: 16px;
     line-height: 100%;
-    text-align: center;
     text-decoration: none;
-    color: #eee;
+    color: $c-text;
 
     transition: color 0.3s;
 
