--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -81,6 +81,14 @@
 
   &__list {
     padding: 0;
+    flex-direction: column;
+    flex-wrap: wrap;
+    height: 85px;
+    column-gap: 20px;
+
+    @include onTablet {
+      column-gap: 100px;
+    }
   }
 
   &__link {
