--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,1 +1,12 @@
-$c-gray: #eee;
+$minWidth: 320px;
+$maxWidth: 1280;
+$maxWidthContainer: 1238;
+$md1: $maxWidthContainer + px;
+$md2: 991.98;
+$md3: 767.98;
+$md4: 479.98;
+
+$mainFont: "IBM Plex Sans", sans-serif;
+$secondFont: "Montserrat", sans-serif;
+$fontSize: 16px;
+$textColor:#0f0e08;
