Header with menu

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,4 +1,5 @@
 @import "utils";
+@import "./blocks/menu.scss";
 // @import "fonts";
 // @import "typography";
 $icon-width: 18px;
@@ -144,9 +145,25 @@ p {
     width: 18px;
     height: 12px;
     
+    transition: background-image 0.3s;
 
     &--menu {
       background-image: url(../images/Menu.png);
+    }
+
+    &--cross {
+      width: 21px;
+      height: 21px;
+
+      background-image: url(../images/Cross.svg);
+      
+      background-size: cover;
+      background-position: center;
+      background-repeat: no-repeat;
+
+      &:hover {
+        transform: scale(1.05);
+      }
     }
   }
 
