Landing page was fixed

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -811,6 +811,14 @@ a:hover {
     @extend .events__title;
   }
 
+  &__wrapper {
+    display: none;
+
+    @include onDesktop {
+      display: block;
+    }
+  }
+
   &__items {
     @include gridContainer {
       grid-template-rows: 600px 360px;
