--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -199,6 +199,9 @@
     height: 50px;
     width: 280px;
     border: 1px solid #1a5a4c;
+    box-shadow: 0 13px 27px transparent;
+
+    @include hover(box-shadow, 0 13px 27px rgba(0, 83, 181, 0.46));
 
     @include onTablet {
       margin: 0;
