--- a/src/styles/blocks/subscribe.scss
+++ b/src/styles/blocks/subscribe.scss
@@ -50,16 +50,21 @@
   &__email {
     margin: 0 auto;
 
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
     height: 50px;
     width: 280px;
 
     @include onTablet {
       height: 70px;
       width: 460px;
+      gap: 16px;
     }
 
     @include onLaptop {
       width: 570px;
+      gap: 30px;
     }
 
     &--link {
@@ -73,24 +78,34 @@
       font-weight: normal;
       font-size: 14px;
       line-height: 100%;
-      width: 100%;
-      height: 100%;
+      height: 50px;
+      width: 230px;
+      border: 2px solid transparent;
       color: $c-lightgrey;
+      box-shadow: 0 13px 27px transparent;
+
+      @include hover(box-shadow, 0 13px 27px rgba(255, 255, 255, 0.46));
 
       @include onTablet {
-        background: linear-gradient(to right, $c-white 96%, transparent 4%);
+        height: 70px;
+        width: 374px;
       }
 
       @include onLaptop {
-        background: linear-gradient(to right, $c-white 95%, transparent 5%);
+        width: 470px;
+      }
+
+      &:focus {
+        outline: none;
       }
     }
 
     &--arrow {
+      width: 50px;
       height: 50px;
-      transform: translate(1px, 2px);
 
       @include onTablet {
+        width: 70px;
         height: 70px;
       }
     }
